[tool.poetry]
name = "wmbc"
version = "0.1.0"
description = ""
authors = ["Jan Kowalewski <jkowalewski@cthings.co>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
pymodbus = {path = "../pymodbus/pymodbus-4.0.0.dev0-py3-none-any.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
