[project]
name = "wmbc"
version = "0.1.0"
description = "Wireless Modbus Bridge Controller"
authors = [
    {name="Jan Kowalewski", email="<jkowalewski@cthings.co>"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wsctrl (>=0.1.0)",
    "crccheck (>=1.3.0)",
    "pyserial (>=3.5)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
